# ot-harjoitustyo

./: .gitignore  README.md
dokumentaatio/: vaatimusmaarittely.md
ilaris-openings/: .pylintrc  pyproject.toml  tasks.py
ilaris-openings/data/: database.sqlite
ilaris-openings/dokumentaatio/: arkkitehtuuri.md  changelog.md  tekoälyn_käyttö.md  tuntikirjanpito.md  vaatimusmaarittely.md
ilaris-openings/src/: config.py  database_connection.py  index.py  initialize_database.py  pyproject.toml
ilaris-openings/src/entities/: openings.py
ilaris-openings/src/openings/: __init__.py  caro-kann_defense.pgn  grünfeld_defense.pgn  openings.py  queens_gambit.pgn  scandinavian_defense.pgn  sicilian_defense.pgn
ilaris-openings/src/repositories/: user_repository.py
ilaris-openings/src/services/: board_service.py  opening_handler.py  practice_service.py  user_service.py
ilaris-openings/src/tests/: chessboard_test.py  openings_test.py
ilaris-openings/src/tests/repositories/: user_repository_test.py
ilaris-openings/src/tests/services/: user_service_test.py
ilaris-openings/src/ui/: choose_opening.py  login.py  main_menu.py  practice_opening.py  register.py  ui.py
laskarit/: viikko1.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kasspaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli.mermaid  sekvenssikaavio.mermaid
