[project]
name = "ilaris-openingtrainer"
version = "0.1.0"
description = "a chess opening trainer by ilari"
authors = [
    {name = "Ilari Ranin",email = "raninilari@gmail.com"}
]
readme = "README.md"
packages = [{ include = "ilaris_openingtrainer", from = "src" }]
requires-python = "^3.10"
dependencies = [
    "chess (>=1.11.2,<2.0.0)",
    "pillow (>=11.2.0,<12.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

